Ensure that indoor walls and ceilings stay below the roof